--- a/bin/pom.xml
+++ b/bin/pom.xml
@@ -9,7 +9,7 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>spring</name>
+  <name>springBatch</name>
   <description>Demo project for Spring Boot</description>
 
   <parent>
