--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -19,17 +19,4 @@ spring.jpa.database= mysql
 spring.jpa.show-sql= true
 spring.jpa.hibernate.ddl-auto= update
 spring.batch.initialize-schema= always
-
-
-#启动时要执行的Job，默认执行全部Job
-spring.batch.job.names = importUserJob
- #是否自动执行定义的Job，默认是
-spring.batch.job.enabled=false
- #是否初始化Spring Batch的数据库，默认为是
-spring.batch.initializer.enabled=true
-spring.batch.schema= classpath:mysql-init-ddl.sql
-#spring.batch.schema=classpath:org/springframework/batch/core/schema-@@platform@@.sql
- #设置SpringBatch的数据库表的前缀
-spring.batch.table-prefix=
-
-
+spring.batch.schema= classpath:schema-@@platform@@.sql
