一次执行多个Job

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,8 +21,8 @@ spring.jpa.hibernate.ddl-auto= update
 spring.batch.initialize-schema= always
 
 
-#启动时要执行的Job，默认执行全部Job
-spring.batch.job.names = importUserJob
+#启动时要执行的Job，默认执行全部Job,importUserJob
+spring.batch.job.names =
  #是否自动执行定义的Job，默认是
 spring.batch.job.enabled=false
  #是否初始化Spring Batch的数据库，默认为是
